# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth-store"
version = "0.1.0"
description = "IronAuth persistence and tenant isolation layer: typed scoped identifiers, scope-only repositories, and Postgres row-level security"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Explicit target list: the integration tests that need a real database are
# gated behind `required-features = ["testing"]` so the DB-free lanes (clippy,
# msrv, musl, cargo check) neither compile the embedded-Postgres dependency nor
# try to run the DB tests. Auto-discovery is off so nothing slips past the gate.
autotests = false

[dependencies]
ironauth-env.workspace = true

# Runtime query API only (no `query!`/`query_as!`): keeps every compile-time
# lane database-free. rustls + ring, no native-tls/openssl (musl static).
sqlx.workspace = true
# URL-safe, strict (canonical) base64 for opaque identifier rendering; rejects
# non-canonical trailing bits on decode, so a malformed identifier cannot masquerade
# as a valid one.
base64.workspace = true
# SHA-256 over migration text for the expand-contract runner's checksums (drift
# and tamper detection). Pure Rust, permissive, already present transitively via
# sqlx, so no new crate enters the graph; keeps MSRV 1.85 and musl clean.
sha2.workspace = true

[features]
# Default build is lean: no test-support surface. Production only ever needs the
# default feature set.
default = []
# Test-support surface: the real-database harness (`test_support`) and the
# reusable cross-tenant IDOR harness (`idor_harness`). Enabled by
# `cargo test --all-features` and by the integration tests' required-features.
# It adds no dependency beyond sqlx (already present), so it stays MSRV-1.85 and
# musl clean; the modules are gated only to keep the test surface out of a
# production build.
testing = []

[dev-dependencies]
# The integration and compile-fail tests. tokio drives the async tests; trybuild
# proves the isolation types reject misuse at compile time.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
trybuild.workspace = true

# RLS integration test: a low-privilege session cannot read another tenant's
# rows even with the app-layer filter bypassed. Needs a real database
# (DATABASE_URL); see the crate docs and scripts/with-test-db.sh.
[[test]]
name = "rls"
path = "tests/rls.rs"
required-features = ["testing"]

# Cross-tenant / cross-environment IDOR harness against every scoped repository
# operation that exists today. Needs a real database (DATABASE_URL).
[[test]]
name = "idor"
path = "tests/idor.rs"
required-features = ["testing"]

# End-to-end repository round-trip (create / get / list / delete, non-recycling)
# against a real database (DATABASE_URL).
[[test]]
name = "repository"
path = "tests/repository.rs"
required-features = ["testing"]

# Every mutation writes exactly one audit row carrying the full envelope, in
# scope. Needs a real database (DATABASE_URL).
[[test]]
name = "audit"
path = "tests/audit.rs"
required-features = ["testing"]

# Same-transaction atomicity: a mid-transaction failure leaves no orphan data
# row and no orphan audit row, and the inverse. Needs a real database.
[[test]]
name = "atomicity"
path = "tests/atomicity.rs"
required-features = ["testing"]

# Append-only enforcement: as the low-privilege app role, UPDATE and DELETE on
# audit rows are denied while INSERT/SELECT in scope work. Needs a real database.
[[test]]
name = "append_only"
path = "tests/append_only.rs"
required-features = ["testing"]

# Migration framework: in-order apply and record, out-of-order rejection,
# checksum-mismatch rejection, and the expand-contract example end to end. Needs
# a real database (DATABASE_URL).
[[test]]
name = "migration"
path = "tests/migration.rs"
required-features = ["testing"]

# Per-environment signing-key persistence and isolation (issue #19): disjoint key
# sets across environments and tenants, uniform cross-scope denial, and the
# provision audit row. Needs a real database (DATABASE_URL).
[[test]]
name = "signing_keys"
path = "tests/signing_keys.rs"
required-features = ["testing"]

# Resource-server registry persistence and isolation (issue #29): the
# audience-to-format registry round-trips both formats, is scope-isolated, rejects
# a duplicate audience per environment, and audits registration. Needs a real
# database (DATABASE_URL).
[[test]]
name = "resource_servers"
path = "tests/resource_servers.rs"
required-features = ["testing"]

# Opaque access-token storage, resolution, and dump safety (issue #29): digest-only
# recording in the redeem transaction, resolve to live claims, revocation and
# expiry flipping it inactive, cross-scope denial, and a simulated database-dump
# proof that no stored material is replayable. Needs a real database (DATABASE_URL).
[[test]]
name = "opaque_access_tokens"
path = "tests/opaque_access_tokens.rs"
required-features = ["testing"]

# The JWT-assertion client-authentication store surfaces (issue #25): the
# cross-node single-use jti replay cache (two store handles, one database), the
# safe TTL prune, cross-scope isolation, and the out-of-band diagnostics sink.
# Needs a real database (DATABASE_URL).
[[test]]
name = "client_auth_suite"
path = "tests/client_auth_suite.rs"
required-features = ["testing"]

# Refresh-token rotation, families, reuse detection, offline_access, and the
# digest-only storage guarantee (issue #21): the authoritative single-use and reuse
# gate, grace-window classification, exactly-once reuse event, offline-vs
# session-bound revocation, hard-cap/idle expiry, and a database-dump proof that no
# plaintext refresh token is stored. Needs a real database (DATABASE_URL).
[[test]]
name = "refresh_tokens"
path = "tests/refresh_tokens.rs"
required-features = ["testing"]

# Pushed-authorization-request store surfaces (issue #27, RFC 9126): the single-use
# atomic consume (works exactly once), the client-binding filter that rejects and
# does not burn a mismatched presenter, expiry, cross-scope isolation, the push and
# consume audit rows, and the per-client require-PAR flag. Needs a real database.
[[test]]
name = "pushed_authorization_requests"
path = "tests/pushed_authorization_requests.rs"
required-features = ["testing"]

# Compile-fail proofs. Database-free, so it runs on every lane (including MSRV).
[[test]]
name = "compile_fail"
path = "tests/compile_fail.rs"

[lints]
workspace = true
