# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth-store"
version = "0.1.0"
description = "IronAuth persistence and tenant isolation layer: typed scoped identifiers, scope-only repositories, and Postgres row-level security"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Explicit target list: the integration tests that need a real database are
# gated behind `required-features = ["testing"]` so the DB-free lanes (clippy,
# msrv, musl, cargo check) neither compile the embedded-Postgres dependency nor
# try to run the DB tests. Auto-discovery is off so nothing slips past the gate.
autotests = false

[dependencies]
ironauth-env.workspace = true
# Per-tenant envelope encryption for PII and secrets at rest (issue #48). The
# AEAD envelope primitive (a standard ring::aead AES-256-GCM DEK/KEK scheme) lives
# in ironauth-jose because the workspace lets exactly ONE crate name `ring`
# directly (scripts/jose-audit.sh); the store consumes that primitive and owns the
# key tables, lifecycle, and the encrypted columns. This is a path edge to an
# in-tree crate: no new external crate, no license change, MSRV/musl unchanged.
ironauth-jose.workspace = true

# Runtime query API only (no `query!`/`query_as!`): keeps every compile-time
# lane database-free. rustls + ring, no native-tls/openssl (musl static).
sqlx.workspace = true
# URL-safe, strict (canonical) base64 for opaque identifier rendering; rejects
# non-canonical trailing bits on decode, so a malformed identifier cannot masquerade
# as a valid one.
base64.workspace = true
# SHA-256 over migration text for the expand-contract runner's checksums (drift
# and tamper detection). Pure Rust, permissive, already present transitively via
# sqlx, so no new crate enters the graph; keeps MSRV 1.85 and musl clean.
sha2.workspace = true
# JSON (de)serialization for the small string-array columns the store owns the
# encoding of (issue #28): the per-client resource allowlist, the frozen granted
# resources on a grant/code, and an opaque token's recorded audience array. Keeping
# the encoding in the store keeps the array shape one canonical representation and
# the OIDC layer free of ad-hoc JSON handling for these columns. Already present
# transitively, so no new crate enters the graph.
serde_json.workspace = true

[features]
# Default build is lean: no test-support surface. Production only ever needs the
# default feature set.
default = []
# Test-support surface: the real-database harness (`test_support`) and the
# reusable cross-tenant IDOR harness (`idor_harness`). Enabled by
# `cargo test --all-features` and by the integration tests' required-features.
# It adds no dependency beyond sqlx (already present), so it stays MSRV-1.85 and
# musl clean; the modules are gated only to keep the test surface out of a
# production build.
testing = []

[dev-dependencies]
# The integration and compile-fail tests. tokio drives the async tests; trybuild
# proves the isolation types reject misuse at compile time.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
trybuild.workspace = true

# RLS integration test: a low-privilege session cannot read another tenant's
# rows even with the app-layer filter bypassed. Needs a real database
# (DATABASE_URL); see the crate docs and scripts/with-test-db.sh.
[[test]]
name = "rls"
path = "tests/rls.rs"
required-features = ["testing"]

# Cross-tenant / cross-environment IDOR harness against every scoped repository
# operation that exists today. Needs a real database (DATABASE_URL).
[[test]]
name = "idor"
path = "tests/idor.rs"
required-features = ["testing"]

# End-to-end repository round-trip (create / get / list / delete, non-recycling)
# against a real database (DATABASE_URL).
[[test]]
name = "repository"
path = "tests/repository.rs"
required-features = ["testing"]

# Every mutation writes exactly one audit row carrying the full envelope, in
# scope. Needs a real database (DATABASE_URL).
[[test]]
name = "audit"
path = "tests/audit.rs"
required-features = ["testing"]

# Same-transaction atomicity: a mid-transaction failure leaves no orphan data
# row and no orphan audit row, and the inverse. Needs a real database.
[[test]]
name = "atomicity"
path = "tests/atomicity.rs"
required-features = ["testing"]

# Append-only enforcement: as the low-privilege app role, UPDATE and DELETE on
# audit rows are denied while INSERT/SELECT in scope work. Needs a real database.
[[test]]
name = "append_only"
path = "tests/append_only.rs"
required-features = ["testing"]

# Migration framework: in-order apply and record, out-of-order rejection,
# checksum-mismatch rejection, and the expand-contract example end to end. Needs
# a real database (DATABASE_URL).
[[test]]
name = "migration"
path = "tests/migration.rs"
required-features = ["testing"]

# Per-environment signing-key persistence and isolation (issue #19): disjoint key
# sets across environments and tenants, uniform cross-scope denial, and the
# provision audit row. Needs a real database (DATABASE_URL).
[[test]]
name = "signing_keys"
path = "tests/signing_keys.rs"
required-features = ["testing"]

# Resource-server registry persistence and isolation (issue #29): the
# audience-to-format registry round-trips both formats, is scope-isolated, rejects
# a duplicate audience per environment, and audits registration. Needs a real
# database (DATABASE_URL).
[[test]]
name = "resource_servers"
path = "tests/resource_servers.rs"
required-features = ["testing"]

# Opaque access-token storage, resolution, and dump safety (issue #29): digest-only
# recording in the redeem transaction, resolve to live claims, revocation and
# expiry flipping it inactive, cross-scope denial, and a simulated database-dump
# proof that no stored material is replayable. Needs a real database (DATABASE_URL).
[[test]]
name = "opaque_access_tokens"
path = "tests/opaque_access_tokens.rs"
required-features = ["testing"]

# The JWT-assertion client-authentication store surfaces (issue #25): the
# cross-node single-use jti replay cache (two store handles, one database), the
# safe TTL prune, cross-scope isolation, and the out-of-band diagnostics sink.
# Needs a real database (DATABASE_URL).
[[test]]
name = "client_auth_suite"
path = "tests/client_auth_suite.rs"
required-features = ["testing"]

# Refresh-token rotation, families, reuse detection, offline_access, and the
# digest-only storage guarantee (issue #21): the authoritative single-use and reuse
# gate, grace-window classification, exactly-once reuse event, offline-vs
# session-bound revocation, hard-cap/idle expiry, and a database-dump proof that no
# plaintext refresh token is stored. Needs a real database (DATABASE_URL).
[[test]]
name = "refresh_tokens"
path = "tests/refresh_tokens.rs"
required-features = ["testing"]

# Pushed-authorization-request store surfaces (issue #27, RFC 9126): the single-use
# atomic consume (works exactly once), the client-binding filter that rejects and
# does not burn a mismatched presenter, expiry, cross-scope isolation, the push and
# consume audit rows, and the per-client require-PAR flag. Needs a real database.
[[test]]
name = "pushed_authorization_requests"
path = "tests/pushed_authorization_requests.rs"
required-features = ["testing"]

# Per-tenant envelope encryption for PII and secrets (issue #48): the DEK/KEK
# envelope round-trips through a scoped repository, cross-tenant and cross-context
# ciphertext fails authenticated decryption, KEK rotation re-wraps DEKs with no
# payload rewrite (old ciphertext still reads), DEK rotation versions new writes
# while old versions stay readable with observable background re-encryption,
# crypto-shredding a tenant KEK makes its data unrecoverable while a sibling tenant
# still decrypts, and a database dump of the encrypted columns yields no plaintext
# and nothing replayable across rows or tenants. Needs a real database.
[[test]]
name = "envelope"
path = "tests/envelope.rs"
required-features = ["testing"]

# The bootstrap users PII columns sealed at rest (issue #48): a database dump of a
# registered user carries no plaintext handle or claims, login still resolves the
# user through the blind index, claims round-trip, a duplicate handle conflicts, and
# neither the sealed values nor the per-tenant blind index leak across tenants. Needs
# a real database.
[[test]]
name = "user_pii"
path = "tests/user_pii.rs"
required-features = ["testing"]

# Compile-fail proofs. Database-free, so it runs on every lane (including MSRV).
[[test]]
name = "compile_fail"
path = "tests/compile_fail.rs"

# The authoritative two-tier session model (issue #32): immediate revocation (a
# revoked or rotated session stops resolving AT ONCE, never merely on expiry), the
# stable-per-(client, session) and distinct-across-clients sid tier, session-fixation
# rotation, the offline-preserving refresh-family cascade and its hard-kill override,
# the scope-fenced bulk revoke, the searchable fleet surfaces, and a forced-rollback
# proof that a revocation and its audit row commit together. Needs a real database.
[[test]]
name = "sessions"
path = "tests/sessions.rs"
required-features = ["testing"]

# The durable session-ended event fan-out (issue #35): a transactional outbox row is
# enqueued on EVERY terminal end and NEVER on a rotation, the enqueue is transactional
# with the revoke (a forced rollback emits nothing), the cause matrix carries each
# terminal cause, the outbox is cross-tenant isolated, delivery is at-least-once with a
# claim lease and idempotent mark-delivered, and the app role can drain but cannot
# rewrite the immutable event body. Needs a real database (DATABASE_URL).
[[test]]
name = "session_ended_fanout"
path = "tests/session_ended_fanout.rs"
required-features = ["testing"]

# The per-RP back-channel-logout delivery queue (issue #34): a drained session-ended
# event explodes into one delivery row per participating RP (only clients that registered
# a backchannel_logout_uri, each carrying its OWN sid, never another client's); claim_due
# leases due rows and a lapsed lease reappears them; mark_delivered and record_failure
# drive the delivered / retry / dead-letter transitions; two concurrent claimers lease
# disjoint sets via FOR UPDATE SKIP LOCKED; and the queue is cross-tenant isolated. Needs
# a real database (DATABASE_URL).
[[test]]
name = "backchannel_delivery"
path = "tests/backchannel_delivery.rs"
required-features = ["testing"]

# The organization resource (issue #41): create/get/list/delete, cursor pagination,
# cross-tenant and cross-environment uniform not-found, containment (no child under a
# foreign or nonexistent parent), idempotent creation, and the audited-mutation
# invariant. Needs a real database (DATABASE_URL).
[[test]]
name = "organizations"
path = "tests/organizations.rs"
required-features = ["testing"]

# Least-privilege enforcement of the data-plane role on organizations (issue #41):
# as ironauth_app, every statement on organizations is refused as insufficient
# privilege (the #31 lesson applied to the other role), while ironauth_control keeps
# its column-scoped soft delete. Needs a real database (DATABASE_URL).
[[test]]
name = "organization_grants"
path = "tests/organization_grants.rs"
required-features = ["testing"]

[lints]
workspace = true
