# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth-store"
version = "0.1.0"
description = "IronAuth persistence and tenant isolation layer: typed scoped identifiers, scope-only repositories, and Postgres row-level security"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Explicit target list: the integration tests that need a real database are
# gated behind `required-features = ["testing"]` so the DB-free lanes (clippy,
# msrv, musl, cargo check) neither compile the embedded-Postgres dependency nor
# try to run the DB tests. Auto-discovery is off so nothing slips past the gate.
autotests = false

[dependencies]
ironauth-env.workspace = true
# Per-tenant envelope encryption for PII and secrets at rest (issue #48). The
# AEAD envelope primitive (a standard ring::aead AES-256-GCM DEK/KEK scheme) lives
# in ironauth-jose because the workspace lets exactly ONE crate name `ring`
# directly (scripts/jose-audit.sh); the store consumes that primitive and owns the
# key tables, lifecycle, and the encrypted columns. This is a path edge to an
# in-tree crate: no new external crate, no license change, MSRV/musl unchanged.
ironauth-jose.workspace = true

# Runtime query API only (no `query!`/`query_as!`): keeps every compile-time
# lane database-free. rustls + ring, no native-tls/openssl (musl static).
sqlx.workspace = true
# URL-safe, strict (canonical) base64 for opaque identifier rendering; rejects
# non-canonical trailing bits on decode, so a malformed identifier cannot masquerade
# as a valid one.
base64.workspace = true
# Unicode NFKC normalization for the central identifier canonicalization seam
# (issue #54): the compatibility-fold half of turning a raw login handle into its
# one canonical form. Already present transitively via sqlx (url -> idna), so this
# is a direct path edge, not a new crate; MSRV 1.85 and the musl static lane hold.
unicode-normalization.workspace = true
# Unicode General_Category lookup for the canonicalization seam (issue #54): step 1
# strips invisible / control / format / separator characters by PROPERTY (Cc, Cf,
# Zl, Zp), not a hand-curated code-point list with gaps. Already present transitively
# via sqlx (-> stringprep), so no new crate enters the graph; MSRV 1.85 and the musl
# static lane hold.
unicode-properties.workspace = true
# Full Unicode Default Case Folding for the canonicalization seam (issue #54): folds
# the case pairs where simple lowercasing diverges (the German sharp s, the Greek
# final sigma) so a mixed-case enumeration variant of a login handle canonicalizes to
# one form. A standard unicode-rs crate (MIT), pure Rust, no build script, depending
# only on unicode-normalization (already in the tree); MSRV 1.85 and the musl static
# lane hold, and cargo-deny passes.
caseless.workspace = true
# SHA-256 over migration text for the expand-contract runner's checksums (drift
# and tamper detection). Pure Rust, permissive, already present transitively via
# sqlx, so no new crate enters the graph; keeps MSRV 1.85 and musl clean.
sha2.workspace = true
# JSON (de)serialization for the small string-array columns the store owns the
# encoding of (issue #28): the per-client resource allowlist, the frozen granted
# resources on a grant/code, and an opaque token's recorded audience array. Keeping
# the encoding in the store keeps the array shape one canonical representation and
# the OIDC layer free of ad-hoc JSON handling for these columns. Already present
# transitively, so no new crate enters the graph.
serde_json.workspace = true
# Derive the canonical snapshot document types (issue #43): the promotable-config
# export/import shapes serialize and deserialize through serde. serde is already in
# the tree (sqlx, serde_json, and every other crate depend on it), so this adds a
# direct edge but no new crate; MSRV 1.85 and the musl static lane are unchanged.
serde.workspace = true

[features]
# Default build is lean: no test-support surface. Production only ever needs the
# default feature set.
default = []
# Test-support surface: the real-database harness (`test_support`) and the
# reusable cross-tenant IDOR harness (`idor_harness`). Enabled by
# `cargo test --all-features` and by the integration tests' required-features.
# It adds no dependency beyond sqlx (already present), so it stays MSRV-1.85 and
# musl clean; the modules are gated only to keep the test surface out of a
# production build.
testing = []

[dev-dependencies]
# The integration and compile-fail tests. tokio drives the async tests; trybuild
# proves the isolation types reject misuse at compile time.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
trybuild.workspace = true
# The BYOK offboarding test (issue #49) uses the ironauth-kms driver seam to
# label a binding and to demonstrate that revoking a customer root fails closed.
# A dev-dependency only: the production store graph does not depend on it.
ironauth-kms.workspace = true

# RLS integration test: a low-privilege session cannot read another tenant's
# rows even with the app-layer filter bypassed. Needs a real database
# (DATABASE_URL); see the crate docs and scripts/with-test-db.sh.
[[test]]
name = "rls"
path = "tests/rls.rs"
required-features = ["testing"]

# Cross-tenant / cross-environment IDOR harness against every scoped repository
# operation that exists today. Needs a real database (DATABASE_URL).
[[test]]
name = "idor"
path = "tests/idor.rs"
required-features = ["testing"]

# End-to-end repository round-trip (create / get / list / delete, non-recycling)
# against a real database (DATABASE_URL).
[[test]]
name = "repository"
path = "tests/repository.rs"
required-features = ["testing"]

# Every mutation writes exactly one audit row carrying the full envelope, in
# scope. Needs a real database (DATABASE_URL).
[[test]]
name = "audit"
path = "tests/audit.rs"
required-features = ["testing"]

# Same-transaction atomicity: a mid-transaction failure leaves no orphan data
# row and no orphan audit row, and the inverse. Needs a real database.
[[test]]
name = "atomicity"
path = "tests/atomicity.rs"
required-features = ["testing"]

# Server-side config promotion (issue #44): diff/plan/apply over a real database.
# The transactional apply (drift guard, idempotency, atomic rollback, audited),
# plan fail-closed on a missing reference, per-target reference resolution, and
# cross-scope isolation plus environment-identity exclusion. Needs a real database.
[[test]]
name = "config_promotion"
path = "tests/config_promotion.rs"
required-features = ["testing"]

# Append-only enforcement: as the low-privilege app role, UPDATE and DELETE on
# audit rows are denied while INSERT/SELECT in scope work. Needs a real database.
[[test]]
name = "append_only"
path = "tests/append_only.rs"
required-features = ["testing"]

# Migration framework: in-order apply and record, out-of-order rejection,
# checksum-mismatch rejection, and the expand-contract example end to end. Needs
# a real database (DATABASE_URL).
[[test]]
name = "migration"
path = "tests/migration.rs"
required-features = ["testing"]

# Per-environment signing-key persistence and isolation (issue #19): disjoint key
# sets across environments and tenants, uniform cross-scope denial, and the
# provision audit row. Needs a real database (DATABASE_URL).
[[test]]
name = "signing_keys"
path = "tests/signing_keys.rs"
required-features = ["testing"]

# Environments as first-class typed objects (issue #42): environment CRUD with a
# typed kind and custom domain through the control plane, the day-one signing key
# provisioned at creation (each environment's keys are its own identity and are
# disjoint across sibling environments and tenants), unbounded environment count
# with no per-environment schema growth (a catalog diff), and the environment /
# signing-key / management-credential environment-identity classification the
# snapshot and promotion engines rely on. Needs a real database (DATABASE_URL).
[[test]]
name = "environment_guardrails"
path = "tests/environment_guardrails.rs"
required-features = ["testing"]

# Resource-server registry persistence and isolation (issue #29): the
# audience-to-format registry round-trips both formats, is scope-isolated, rejects
# a duplicate audience per environment, and audits registration. Needs a real
# database (DATABASE_URL).
[[test]]
name = "resource_servers"
path = "tests/resource_servers.rs"
required-features = ["testing"]

# Opaque access-token storage, resolution, and dump safety (issue #29): digest-only
# recording in the redeem transaction, resolve to live claims, revocation and
# expiry flipping it inactive, cross-scope denial, and a simulated database-dump
# proof that no stored material is replayable. Needs a real database (DATABASE_URL).
[[test]]
name = "opaque_access_tokens"
path = "tests/opaque_access_tokens.rs"
required-features = ["testing"]

# The JWT-assertion client-authentication store surfaces (issue #25): the
# cross-node single-use jti replay cache (two store handles, one database), the
# safe TTL prune, cross-scope isolation, and the out-of-band diagnostics sink.
# Needs a real database (DATABASE_URL).
[[test]]
name = "client_auth_suite"
path = "tests/client_auth_suite.rs"
required-features = ["testing"]

# Refresh-token rotation, families, reuse detection, offline_access, and the
# digest-only storage guarantee (issue #21): the authoritative single-use and reuse
# gate, grace-window classification, exactly-once reuse event, offline-vs
# session-bound revocation, hard-cap/idle expiry, and a database-dump proof that no
# plaintext refresh token is stored. Needs a real database (DATABASE_URL).
[[test]]
name = "refresh_tokens"
path = "tests/refresh_tokens.rs"
required-features = ["testing"]

# Pushed-authorization-request store surfaces (issue #27, RFC 9126): the single-use
# atomic consume (works exactly once), the client-binding filter that rejects and
# does not burn a mismatched presenter, expiry, cross-scope isolation, the push and
# consume audit rows, and the per-client require-PAR flag. Needs a real database.
[[test]]
name = "pushed_authorization_requests"
path = "tests/pushed_authorization_requests.rs"
required-features = ["testing"]

# Per-tenant envelope encryption for PII and secrets (issue #48): the DEK/KEK
# envelope round-trips through a scoped repository, cross-tenant and cross-context
# ciphertext fails authenticated decryption, KEK rotation re-wraps DEKs with no
# payload rewrite (old ciphertext still reads), DEK rotation versions new writes
# while old versions stay readable with observable background re-encryption,
# crypto-shredding a tenant KEK makes its data unrecoverable while a sibling tenant
# still decrypts, and a database dump of the encrypted columns yields no plaintext
# and nothing replayable across rows or tenants. Needs a real database.
[[test]]
name = "envelope"
path = "tests/envelope.rs"
required-features = ["testing"]

# BYOK and crypto-shredding offboarding (issue #49): a scope is enrolled in a
# customer-managed-key binding (driver + opaque reference, never key material), the
# terminal offboarding stage severs the binding in the SAME audited transaction
# that crypto-shreds the platform KEK so the tenant's sealed PII is unrecoverable,
# a sibling's binding and PII are untouched, revoking a customer root fails closed,
# and an unknown driver label is refused. Needs a real database.
[[test]]
name = "byok_offboarding"
path = "tests/byok_offboarding.rs"
required-features = ["testing"]

# The bootstrap users PII columns sealed at rest (issue #48): a database dump of a
# registered user carries no plaintext handle or claims, login still resolves the
# user through the blind index, claims round-trip, a duplicate handle conflicts, and
# neither the sealed values nor the per-tenant blind index leak across tenants. Needs
# a real database.
[[test]]
name = "user_pii"
path = "tests/user_pii.rs"
required-features = ["testing"]

# Admin user CRUD, lifecycle state machine, and external ids (issue #52): create
# with a caller-supplied id, list pagination and filters, every valid and invalid
# lifecycle transition, the suspended-user fence, the delete/disable session
# cascade, external-id uniqueness and cross-tenant isolation and lookup, and that
# the PII (login handle, external id) never lands in plaintext. Needs a real
# database.
[[test]]
name = "user_admin"
path = "tests/user_admin.rs"
required-features = ["testing"]

# User invitations (issue #60): the single-use, expiring, unguessable token whose
# only its digest is stored (a dump yields nothing replayable), the atomic
# consume-and-activate (a concurrent double-accept redeems at most once, never two
# activations), expiry and revoke refusal, the envelope-encrypted invited
# identifier, cross-tenant isolation, and audited create/redeem/revoke. Needs a
# real database.
[[test]]
name = "invitations"
path = "tests/invitations.rs"
required-features = ["testing"]

# JSON Schema identity traits with versioning and migration jobs (issue #53): a
# well-formed schema is accepted and a malformed one rejected; traits validate
# against the active version at write (invalid refused with JSON Pointer errors,
# nothing persisted); arrays and nested objects round-trip; trait data is
# envelope-encrypted (no plaintext in a dump); versioning is immutable and each
# identity records its version; a dry-run reports invalid identities and blocks the
# cutover; a migration job migrates N -> N+1 deterministically, idempotently, and
# resumably; the admin-only visibility split holds; a job is per-scope and audited.
# Needs a real database (DATABASE_URL).
[[test]]
name = "traits"
path = "tests/traits.rs"
required-features = ["testing"]

# Migrations as an invariant-checked state machine (issue #59). Needs a real database.
[[test]]
name = "migration_state_machine"
path = "tests/migration_state_machine.rs"
required-features = ["testing"]

# Compile-fail proofs. Database-free, so it runs on every lane (including MSRV).
[[test]]
name = "compile_fail"
path = "tests/compile_fail.rs"

# The authoritative two-tier session model (issue #32): immediate revocation (a
# revoked or rotated session stops resolving AT ONCE, never merely on expiry), the
# stable-per-(client, session) and distinct-across-clients sid tier, session-fixation
# rotation, the offline-preserving refresh-family cascade and its hard-kill override,
# the scope-fenced bulk revoke, the searchable fleet surfaces, and a forced-rollback
# proof that a revocation and its audit row commit together. Needs a real database.
[[test]]
name = "sessions"
path = "tests/sessions.rs"
required-features = ["testing"]

# The durable session-ended event fan-out (issue #35): a transactional outbox row is
# enqueued on EVERY terminal end and NEVER on a rotation, the enqueue is transactional
# with the revoke (a forced rollback emits nothing), the cause matrix carries each
# terminal cause, the outbox is cross-tenant isolated, delivery is at-least-once with a
# claim lease and idempotent mark-delivered, and the app role can drain but cannot
# rewrite the immutable event body. Needs a real database (DATABASE_URL).
[[test]]
name = "session_ended_fanout"
path = "tests/session_ended_fanout.rs"
required-features = ["testing"]

# The per-RP back-channel-logout delivery queue (issue #34): a drained session-ended
# event explodes into one delivery row per participating RP (only clients that registered
# a backchannel_logout_uri, each carrying its OWN sid, never another client's); claim_due
# leases due rows and a lapsed lease reappears them; mark_delivered and record_failure
# drive the delivered / retry / dead-letter transitions; two concurrent claimers lease
# disjoint sets via FOR UPDATE SKIP LOCKED; and the queue is cross-tenant isolated. Needs
# a real database (DATABASE_URL).
[[test]]
name = "backchannel_delivery"
path = "tests/backchannel_delivery.rs"
required-features = ["testing"]

# The organization resource (issue #41): create/get/list/delete, cursor pagination,
# cross-tenant and cross-environment uniform not-found, containment (no child under a
# foreign or nonexistent parent), idempotent creation, and the audited-mutation
# invariant. Needs a real database (DATABASE_URL).
[[test]]
name = "organizations"
path = "tests/organizations.rs"
required-features = ["testing"]

# Least-privilege enforcement of the data-plane role on organizations (issue #41):
# as ironauth_app, every statement on organizations is refused as insufficient
# privilege (the #31 lesson applied to the other role), while ironauth_control keeps
# its column-scoped soft delete. Needs a real database (DATABASE_URL).
[[test]]
name = "organization_grants"
path = "tests/organization_grants.rs"
required-features = ["testing"]

# The tenant lifecycle state machine, residency attributes, data-plane fence, and
# crypto-shredding offboarding (#46). Needs a real database (DATABASE_URL).
[[test]]
name = "tenant_lifecycle"
path = "tests/tenant_lifecycle.rs"
required-features = ["testing"]

# The canonical secret-free config snapshot export (issue #43): a fully-populated
# fixture environment exports byte-identically, carries no secret or key material,
# is cross-scope isolated, and covers exactly the promotable classification. Needs
# a real database (DATABASE_URL).
[[test]]
name = "config_snapshot"
path = "tests/config_snapshot.rs"
# Per-environment custom domains with built-in ACME (issue #47, EXPLORATORY):
# registration opens a pending challenge, the challenge lifecycle moves through
# validated and failed (with a deterministic backoff under a manual clock), an
# issued cert private key is stored only as envelope ciphertext (no plaintext in a
# dump), one tenant cannot verify another tenant's verified domain, and an unsafe
# domain is refused. Needs a real database (DATABASE_URL).
[[test]]
name = "custom_domains"
path = "tests/custom_domains.rs"
required-features = ["testing"]

# Environment-scoped secrets and variables (issue #45): a secret is sealed at rest
# (a raw column probe yields no plaintext) and never returns its value while it
# opens back exactly under the master key, a variable round-trips its value, both
# are cross-tenant and cross-environment isolated, resolution reads the right
# environment's value (and an unresolved reference is reported without an apply), a
# snapshot carries variables and secret references but never a secret value, every
# mutation is audited, and a referenced secret or variable cannot be deleted while
# an unreferenced one can. Needs a real database (DATABASE_URL).
[[test]]
name = "environment_secrets_variables"
path = "tests/environment_secrets_variables.rs"
required-features = ["testing"]

# Self-service account management (issue #61): a password change verifies through
# the stored hash, writes a new one, and revokes every OTHER session while keeping
# the current one; a credential enroll/list/remove round-trips with the friendly
# name sealed at rest; the last-usable-credential guardrail blocks removing the last
# primary-login credential without the recovery acknowledgment; a cross-subject
# credential id is the uniform not-found; and every mutation is audited to the end
# user. Needs a real database (DATABASE_URL).
[[test]]
name = "self_service_account"
path = "tests/self_service_account.rs"
required-features = ["testing"]

# WebAuthn passkey persistence (issue #65): a verified registration round-trips
# with the COSE public key stored verbatim and the nickname sealed; the same
# credential id cannot be registered twice (the database dedupe); an assertion
# advances the sign counter, and a regression flags a clone with an audit row; a
# challenge is single-use; a cross-subject credential is the uniform not-found.
# Needs a real database (DATABASE_URL).
[[test]]
name = "webauthn_credentials"
path = "tests/webauthn_credentials.rs"
required-features = ["testing"]

# TOTP and recovery-code persistence (issue #69): the seed is sealed at rest and
# opens back under the tenant DEK; an abandoned enrollment stays pending; single-use
# is a hard store invariant (a replayed time-step is refused) with drift resync;
# recovery codes are hashed, single-use, and regeneration invalidates prior codes;
# TOTP verify and recovery redeem are audited distinctly; a cross-subject factor is
# the uniform not-found; and the exit export carries the opened seed. Needs a real
# database (DATABASE_URL).
[[test]]
name = "totp_credentials"
path = "tests/totp_credentials.rs"
required-features = ["testing"]

# Flexible identifiers on the central canonicalization seam (issue #54): the
# canonicalization-mismatch CVE class fails to reproduce (Unicode invisibles,
# mixed case, and fullwidth homoglyphs resolve identically across resolution and
# uniqueness), all three uniqueness modes behave (environment-wide default,
# org-scoped fallback, and non-unique), a post-canonicalization collision is
# rejected with the deterministic conflict, identifier-first resolution returns
# only the methods applicable to the resolved account, the mode-change validation
# pass reports collisions, and the identifier value is sealed and blind-indexed (no
# plaintext in a dump). Needs a real database (DATABASE_URL).
[[test]]
name = "flexible_identifiers"
path = "tests/flexible_identifiers.rs"
required-features = ["testing"]

[lints]
workspace = true
