# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth"
version = "0.1.0"
description = "IronAuth: a standards-first OpenID Connect identity platform in one binary"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ironauth-env.workspace = true
ironauth-config.workspace = true
ironauth-server.workspace = true
# The management API (issue #11) is mounted on the management plane when a
# bootstrap operator token is configured; the store provides the control-plane
# connection. Both are rustls/ring only (no openssl/native-tls), so the musl
# static lane holds.
ironauth-store.workspace = true
ironauth-admin.workspace = true
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true

[features]
# Forwarded to the server crate: OTLP trace export off by default so the
# default build and the musl static lane stay lean and protoc-free.
otlp = ["ironauth-server/otlp"]

[lints]
workspace = true
