# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth"
version = "0.1.0"
description = "IronAuth: a standards-first OpenID Connect identity platform in one binary"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ironauth-env.workspace = true
ironauth-config.workspace = true
ironauth-server.workspace = true
# The management API (issue #11) is mounted on the management plane when a
# bootstrap operator token is configured; the store provides the control-plane
# connection. Both are rustls/ring only (no openssl/native-tls), so the musl
# static lane holds.
ironauth-store.workspace = true
ironauth-admin.workspace = true
# The OIDC provider (issue #12) is mounted on the PUBLIC plane when
# oidc.enabled is set; the store provides the data-plane connection. rustls/ring
# only, so the musl static lane holds.
ironauth-oidc.workspace = true
ironauth-jose.workspace = true
# The tenant/environment quota engine (issue #50): the boot path builds one
# enforcer from the [quota] config and hands it to the OIDC data plane. Pure,
# in-memory token buckets with no persistence or network dependency.
ironauth-quota.workspace = true
# The config-as-code CLI (issue #51): the `validate`/`plan`/`apply`/`drift`
# subcommands dispatch into this crate. It is a THIN client of the management API
# and owns its own control-plane HTTP client (the outbound-HTTP dependency lives
# there, not in this server-wiring binary, so scripts/http-audit.sh keeps this
# crate free of an HTTP-client dependency).
ironauth-apply.workspace = true
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tracing.workspace = true

[features]
# Forwarded to the server crate: OTLP trace export off by default so the
# default build and the musl static lane stay lean and protoc-free.
otlp = ["ironauth-server/otlp"]

[lints]
workspace = true
